datasets/dataset_txt/mitmproxy/mitmproxy_287.txt
cwaazywabbit commented on 28 May 2018
Hi,
no matter how I install mitmproxy (git, pip3, pre-package) I get the following syntax error:
    server: typing.Any = None
          ^
SyntaxError: invalid syntax
How can I solve this? using Centos 6.9.
Regards